[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = -2.0
margin_right = 1026.0
margin_bottom = 46.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="0" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "0"

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 94.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 143.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_right = 192.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 241.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "2"

[node name="5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 245.0
margin_right = 290.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="6" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 339.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "3"

[node name="7" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 343.0
margin_right = 388.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="8" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 392.0
margin_right = 437.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "4"

[node name="9" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 441.0
margin_right = 486.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="10" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 535.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "5"

[node name="11" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 539.0
margin_right = 584.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="12" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 588.0
margin_right = 633.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "6"

[node name="13" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 637.0
margin_right = 682.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="14" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 686.0
margin_right = 731.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "7"

[node name="15" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 735.0
margin_right = 780.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="16" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 784.0
margin_right = 829.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "8"

[node name="17" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 833.0
margin_right = 878.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="18" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 882.0
margin_right = 927.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "9"

[node name="19" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 931.0
margin_right = 976.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="20" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 980.0
margin_right = 1026.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 24.0
margin_right = 1026.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 87.0
margin_bottom = 19.0
text = "VientoFuerza:"

[node name="-01viento" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 91.0
margin_right = 131.0
margin_bottom = 24.0
text = "+0.1"

[node name="-1viento" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 135.0
margin_right = 160.0
margin_bottom = 24.0
text = "-1"

[node name="viento" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 164.0
margin_right = 222.0
margin_bottom = 24.0
text = "0"
expand_to_text_length = true

[node name="+1viento" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 226.0
margin_right = 254.0
margin_bottom = 24.0
text = "+1"

[node name="+01viento" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 258.0
margin_right = 298.0
margin_bottom = 24.0
text = "+0.1"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 302.0
margin_top = 5.0
margin_right = 406.0
margin_bottom = 19.0
text = "VientoDirection:"

[node name="viento_direction" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 410.0
margin_right = 435.0
margin_bottom = 24.0
text = "->"

[node name="invert" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 439.0
margin_right = 679.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Invertir"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 683.0
margin_right = 923.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "RESET"

[node name="borde" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 927.0
margin_right = 977.0
margin_bottom = 24.0
text = "Borde"

[node name="INFO" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 981.0
margin_right = 1026.0
margin_bottom = 24.0
text = "INFO"
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/viento" to="." method="_on_viento_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/viento_direction" to="." method="_on_viento_favor_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/invert" to="." method="_on_invert_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/borde" to="." method="_disabled_borde"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/INFO" to="." method="_on_INFO_pressed"]
